# Twitchbot

./: .gitignore  CODE_OF_CONDUCT.md  README.md  appveyor.yml  meson.build
docs/: Doxyfile.in  meson.build
includes/: bot.hpp  command.hpp  commandhandler.hpp  paramparser.hpp  parser.hpp  timerhandler.hpp
includes/commands/: addcommand.hpp  addtimer.hpp  changeprefix.hpp  editresult.hpp  edittimer.hpp  helpcommand.hpp  listcommands.hpp  listtimerscommand.hpp  lurkcommand.hpp  removecommand.hpp  removetimer.hpp
src/: bot.cpp  commandhandler.cpp  main.cpp  meson.build  paramparser.cpp  parser.cpp  timerhandler.cpp
src/commands/: addcommand.cpp  addtimer.cpp  changeprefix.cpp  editresult.cpp  edittimer.cpp  helpcommand.cpp  listcommands.cpp  listtimerscommand.cpp  lurkcommand.cpp  pingcommand.cpp  removecommand.cpp  removetimer.cpp
