executable('twitchbot',
        [
        'main.cpp',
        'bot.cpp',
        'parser.cpp',
        'commandhandler.cpp',
        'timerhandler.cpp',
        'paramparser.cpp',
        'commands/addtimer.cpp',
        'commands/changeprefix.cpp',
        'commands/editresult.cpp',
        'commands/edittimer.cpp',
        'commands/helpcommand.cpp',
        'commands/lurkcommand.cpp',
        'commands/removetimer.cpp',
        'commands/listtimerscommand.cpp',
        'commands/listcommands.cpp',
        'commands/addcommand.cpp',
        ]
    )